src/Test/Fixtures/Good/BitQubit/qubitDeclaration2.lf
let singleQubit : qubit = qalloc(1);
