src/Test/Fixtures/Bad/BitQubit/missingBindingNameInTypedQubitDeclaration.lf
let : qubit = qalloc(1);